Fix row alignment and size

--- a/src/components/app-about/app-about.scss
+++ b/src/components/app-about/app-about.scss
@@ -7,7 +7,7 @@ app-about {
   }
   .photo-row {
     margin-top: 10%;
-    height: 30%;
+    height: 35%;
   }
   .bio-row {
     height: 40%;
